has been corrected to overlap with other panels that focus under the editor

--- a/styles/highlight-colors.less
+++ b/styles/highlight-colors.less
@@ -9,11 +9,11 @@
 }
 
 atom-overlay.highlight-color {
-  z-index: 2 !important;
+  z-index: 0 !important;
 }
 
 .tab-bar {
-  z-index: 3;
+  z-index: 1;
 }
 
 .highlight-color-container {
